# c-calculator

./: .gitignore  CMakeLists.txt  README.md
C/: README.md
C/core/: analysis.c  calculator.c
C/lib/list/: list.h
C/tests/calculator/: TEST_EVALUATE.cpp
c/: CMakeLists.txt  README.md
c/main/: main.c
core/: user_interface.c
docs/: README.md  trabalho-calculadora.md
lib/catch2/: catch.hpp
lib/doctest/: doctest.h
lib/list/: list_util.c  list_util.h
src/__tests__/: README.md  main.test.cpp
src/__tests__/analysis/: copy_to.test.cpp  expr_to_list.test.cpp  find_number_end.test.cpp  is_number.test.cpp  is_operator.test.cpp
src/__tests__/calculator/: calculator.test.cpp  evaluate.test.cpp  is_balanced.test.cpp  is_bracket.test.cpp  match.test.cpp  sanitize.test.cpp  to_postfix.test.cpp
src/__tests__/doctest/: test_doctest.test.cpp
src/__tests__/list/: char_list_to_str.test.cpp  create_char_list_from.test.cpp  get_at_index.test.cpp  list.test.cpp  list_char.test.cpp  list_double.test.cpp  stack.test.cpp  test_list.test.cpp
src/__tests__/parser/: copy_to.test.cpp  find_number_end.test.cpp  is_number.test.cpp  is_operator.test.cpp  tokenize.test.cpp
src/__tests__/sanitization/: remove_illegal.test.cpp  remove_whitespace.test.cpp  sanitize.test.cpp
src/__tests__/scanner/: copy_to.test.cpp  find_number_end.test.cpp  tokenize.test.cpp
src/__tests__/user_interface/: function.test.cpp  read_from_terminal.test.cpp
src/__tests__/util/: remove_illegal.test.cpp  remove_whitespace.test.cpp  test_util.test.cpp
src/core/: analysis.c  analysis.h  calculator.c  calculator.h  operations.c  operations.h  parser.c  parser.h  sanitization.c  sanitization.h  scanner.c  scanner.h  util.h
src/main/: main.c  test_main.c
src/tests/analysis/: is_operator.test.cpp
src/tests/calculator/: is_balanced.test.cpp
tests/calculator/: TEST_EVALUATE.cpp
